# flight-rs

./: .rustfmt.toml  1984-rpg.py  Cargo.toml  README.md  docker-compose.yml
.cursor/rules/: rust-game-development-testing-approaches.mdc
.github/workflows/: micropython.yml  rust.yml
docker/: Dockerfile
docs/: CONTRIBUTING.md  DEPLOYMENT.md  GAMEPLAY.md  PROJECT_STRUCTURE.md
micropython/: client.py
micropython/lib/: ssd1306.py
python/: pyproject.toml
python/scripts/: deploy_to_device.py
python/tests/: test_server.py
src/: lib.rs  main.rs  physics.rs  rpg_structs.rs  server.rs
tests/: flight_integration_test.rs
web/: index.html  script.js  style.css
