[package]
name = "flight_sim"
version = "0.1.0"
edition = "2021"
default-run = "server"

# Library definition
[lib]
name = "flight_sim"
path = "src/lib.rs"

# Binary definitions
[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
# Server dependencies
tokio = { version = "1.36", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = "0.22"
futures = "0.3"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.7", features = ["v4", "serde"] }
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
nalgebra = { version = "0.32", features = ["serde-serialize"] }

# Standalone mode dependencies
# minifb = "0.28"

[dev-dependencies]
# Integration testing dependencies
insta = { version = "1.39", features = ["yaml"] } # For snapshot testing
tokio-tungstenite = "0.22" # Needed for WebSocket client in tests
url = "2.5"
anyhow = "1.0"